--- a/apps/dapp/package.json
+++ b/apps/dapp/package.json
@@ -101,6 +101,7 @@
     "storybook": "^8.1.1",
     "storybook-addon-remix-react-router": "^3.0.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-motion": "^1.1.0",
     "typescript": "5.2.2",
     "vite": "^5.0.8",
     "vitest": "^1.5.0"
