--- a/apps/token-sale/package.json
+++ b/apps/token-sale/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite --port ${VITE_APP_PORT-3000}",
     "build": "tsc -p tsconfig.build.json && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "preview": "vite preview",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
     "storybook": "storybook dev -p 6006",
@@ -35,64 +35,35 @@
     "@bltzr-gg/eslint-config": "workspace:*",
     "@bltzr-gg/typescript-config": "workspace:*",
     "@bltzr-gg/ui": "workspace:*",
-    "@fleek-platform/sdk": "^3.5.1",
-    "@helia/verified-fetch": "^2.3.1",
     "@hookform/resolvers": "^4.1.3",
-    "@openzeppelin/merkle-tree": "^1.0.6",
     "@rainbow-me/rainbowkit": "^2.0.2",
     "@tanstack/react-query": "5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
     "@tanstack/react-table": "^8.11.7",
-    "@trpc/client": "^10.45.1",
-    "@uniswap/v3-sdk": "^3.18.1",
-    "@xyfinance/widget": "^4.6.1",
-    "ajv": "^8.12.0",
-    "ajv-formats": "^2.1.1",
     "date-fns": "^3.3.1",
-    "debounce": "^2.1.1",
-    "ethereum-blockies": "^0.1.1",
-    "express": "^4.18.2",
     "graphql": "16.8.1",
     "jotai": "^2.7.0",
     "lucide-react": "^0.439.0",
-    "papaparse": "^5.4.1",
-    "plausible-tracker": "^0.3.9",
     "react": "18.3.1",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.21.3",
-    "react-scroll": "^1.9.0",
-    "react-use-wizard": "^2.3.0",
     "recharts": "^2.12.0",
-    "ts-prune": "^0.10.3",
     "viem": "^2.17.3",
     "vite-plugin-node-polyfills": "^0.17.0",
     "vite-tsconfig-paths": "^4.3.1",
     "wagmi": "^2.5.2"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.4.0",
     "@dotenvx/dotenvx": "^1.7.0",
     "@hookform/devtools": "^4.3.1",
-    "@openapitools/openapi-generator-cli": "^2.9.0",
-    "@storybook/addon-essentials": "^8.1.1",
-    "@storybook/addon-interactions": "^8.1.1",
-    "@storybook/addon-links": "^8.1.1",
-    "@storybook/blocks": "^8.1.1",
-    "@storybook/react": "^8.1.1",
-    "@storybook/react-vite": "^8.1.1",
-    "@storybook/test": "^8.1.1",
     "@tanstack/eslint-plugin-query": "^5.20.1",
-    "@types/ethereum-blockies": "^0.1.2",
     "@types/node": "^20.11.5",
-    "@types/papaparse": "^5.3.14",
     "@types/react": "18.2.48",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.18",
     "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^4.2.1",
-    "angry-purple-tiger": "^1.0.5",
     "autoprefixer": "^10.4.17",
     "cypress": "^13.13.3",
     "eslint": "^8.55.0",
@@ -100,8 +71,6 @@
     "msw": "^2.3.5",
     "postcss": "^8.4.33",
     "start-server-and-test": "^2.0.5",
-    "storybook": "^8.1.1",
-    "storybook-addon-remix-react-router": "^3.0.0",
     "tailwindcss": "^3.4.1",
     "tailwindcss-motion": "^1.1.0",
     "typescript": "5.2.2",
