--- a/apps/token-sale/package.json
+++ b/apps/token-sale/package.json
@@ -52,7 +52,8 @@
     "viem": "^2.17.3",
     "vite-plugin-node-polyfills": "^0.17.0",
     "vite-tsconfig-paths": "^4.3.1",
-    "wagmi": "^2.5.2"
+    "wagmi": "^2.5.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.7.0",
