--- a/apps/token-sale/package.json
+++ b/apps/token-sale/package.json
@@ -38,6 +38,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@rainbow-me/rainbowkit": "^2.0.2",
     "@sentry/react": "^9.11.0",
+    "@sentry/vite-plugin": "^3.3.1",
     "@tanstack/react-query": "5.18.1",
     "@tanstack/react-query-devtools": "^5.18.1",
     "@tanstack/react-table": "^8.11.7",
