Fix issue with approval not being waited for, fix token mixup

--- a/apps/token-sale/.env.example
+++ b/apps/token-sale/.env.example
@@ -18,3 +18,9 @@ VITE_WALLETCONNECT_PROJECT_ID=29c1aa1528d4ed7ffe54ee450b483393
 
 # Disable react-query dev tools
 VITE_DISABLE_REACT_QUERY_DEV_TOOLS=true
+
+
+# Auction specific
+VITE_AUCTION_LOT_ID=
+VITE_AUCTION_HOUSE_CONTRACT_ADDRESS=
+AUCTIONVITE_AUCTION_CHAIN_ID_CHAIN_ID=
