--- a/apps/token-sale/package.json
+++ b/apps/token-sale/package.json
@@ -35,8 +35,11 @@
     "@bltzr-gg/eslint-config": "workspace:*",
     "@bltzr-gg/typescript-config": "workspace:*",
     "@bltzr-gg/ui": "workspace:*",
+    "@coinbase/onchainkit": "^0.38.7",
+    "@dynamic-labs/ethereum": "^4.12.4",
+    "@dynamic-labs/sdk-react-core": "^4.12.4",
+    "@dynamic-labs/wagmi-connector": "^4.12.4",
     "@hookform/resolvers": "^4.1.3",
-    "@rainbow-me/rainbowkit": "^2.0.2",
     "@sentry/react": "^9.11.0",
     "@sentry/vite-plugin": "^3.3.1",
     "@tanstack/react-query": "5.18.1",
@@ -51,7 +54,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.12.0",
-    "viem": "^2.17.3",
+    "viem": "2.23.9",
     "vite-plugin-node-polyfills": "^0.17.0",
     "vite-tsconfig-paths": "^4.3.1",
     "wagmi": "^2.5.2",
@@ -59,6 +62,8 @@
   },
   "devDependencies": {
     "@dotenvx/dotenvx": "^1.7.0",
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@hookform/devtools": "^4.3.1",
     "@tanstack/eslint-plugin-query": "^5.20.1",
     "@types/node": "^20.11.5",
